2014-10-06  Glenn Morris  <rgm@gnu.org>

	Remove calendar code obsolete since at least version 23.1.
	* calendar/cal-bahai.el (calendar-absolute-from-bahai)
	(calendar-print-bahai-date, calendar-bahai-prompt-for-date)
	(calendar-goto-bahai-date, list-bahai-diary-entries)
	(mark-bahai-calendar-date-pattern, mark-bahai-diary-entries)
	(insert-bahai-diary-entry, insert-monthly-bahai-diary-entry)
	(insert-yearly-bahai-diary-entry):
	* calendar/cal-china.el (chinese-calendar-time-zone)
	(chinese-calendar-location-name)
	(chinese-calendar-daylight-time-offset)
	(chinese-calendar-standard-time-zone-name)
	(chinese-calendar-daylight-time-zone-name)
	(chinese-calendar-daylight-savings-starts)
	(chinese-calendar-daylight-savings-ends)
	(chinese-calendar-daylight-savings-starts-time)
	(chinese-calendar-daylight-savings-ends-time)
	(chinese-calendar-celestial-stem)
	(chinese-calendar-terrestrial-branch)
	(calendar-absolute-from-chinese, calendar-print-chinese-date)
	(calendar-goto-chinese-date):
	* calendar/cal-coptic.el (calendar-absolute-from-coptic)
	(calendar-print-coptic-date, coptic-prompt-for-date)
	(calendar-goto-coptic-date, calendar-absolute-from-ethiopic)
	(calendar-print-ethiopic-date, calendar-goto-ethiopic-date):
	* calendar/cal-french.el (calendar-absolute-from-french)
	(calendar-print-french-date, calendar-goto-french-date):
	* calendar/cal-hebrew.el (diary-sabbath-candles-minutes)
	(calendar-absolute-from-hebrew, calendar-print-hebrew-date)
	(hebrew-calendar-yahrzeit, calendar-goto-hebrew-date)
	(holiday-rosh-hashanah-etc, holiday-hanukkah)
	(holiday-passover-etc, holiday-tisha-b-av-etc)
	(list-hebrew-diary-entries, mark-hebrew-calendar-date-pattern)
	(mark-hebrew-diary-entries, insert-hebrew-diary-entry)
	(insert-monthly-hebrew-diary-entry)
	(insert-yearly-hebrew-diary-entry, list-yahrzeit-dates)
	(diary-omer, diary-yahrzeit, diary-rosh-hodesh, diary-parasha)
	(diary-sabbath-candles):
	* calendar/cal-islam.el (calendar-absolute-from-islamic)