@@ -1,3 +1,7 @@
+2014-10-06  Leo Liu  <sdl.web@gmail.com>
+
+	* imenu.el (imenu): Re-write for clarity.
+
 2014-10-06  Glenn Morris  <rgm@gnu.org>
 
 	Remove calendar code obsolete since at least version 23.1.
